# offtech-ctf-secure

./: .gitignore  .rsyncignore  GS20201207144131.tgz  Makefile  README.md  do-nmap.sh  known-vulnerabilities.md  pyproject.toml  red-conf.toml  redder
GS20201207144131/: advisory-info.txt  apache_poc.py
Students_Deterlab_NS/: deposit.py  httpd.conf  index.php  install_server  login.py  process.php  setup.sql  sign_up.py  withdraw.py
Students_Deterlab_NS_original/: cctf.ns  install_server  process.php  setup.sql
blue/: README.md  backup_db.sh  constraints.py  crontab  hashing_algo.py  iptablefilters_gateway.sh  iptablefilters_server.sh  login.py  sign_up.py  transfers.py
blue/analyzer/: README.md  analyze_pcap.py  capture.sh
blue/analyzer/templates/: http.html  index.html  ip.html
blue/backup_scripts/: db_config.cnf  restore_backup.sh  start_automatic_backup.sh
red/: __main__.py  config.py  sqlmap.sh
red/attacks/: __init__.py  all.py  apache_push_diary.py  check_default_credentials.py  concurrent_ids.py  create_users.py  do_you_transact.py  gigi_is_ok.py  inject_money.py  keep_very_alive.py  naughty.py  put_some.py  too_much_money.py  weird_names.py  what_she_said.py  withdraw_all.py  withdraw_all_from_default.py
red/utils/: __init__.py  client.py
